# cpc-city-of-yes-housing-opportunity-testimony-data

./: .gitignore  LICENSE.md  README.md  analyze.py  borough_analysis.py  city_of_yes_elements.py  common.py  for_against_analysis.py  for_or_against.py  models.py  pyproject.toml  speakers.json  talking_points_analysis.py  testimonies.json
city-council-data/: speakers.json  testimonies.json  transcript.json
city-planning-commission-data/: testimonies.csv  transcript.json
data-examples/: talking-points-report-open-new-york.md  talking-points-report-open-plans.md  talking-points-report-paul-graziano.md
extracted-data/: alex-armlovich.json  alexandra-brodsky.json  alicia-boyd.json  amie-gross.json  andrea-goldwyn.json  anita-laremont.json  ari-s.json  austin-celestin.json  barika-williams.json  bernadette-ferrara.json  bonnie-mohan.json  bria-donohue.json  carin-bail.json  carina-nieves.json  carlo-casa.json  carol-marion.json  carol-mccarthy.json  catherine-murawski.json  cathleen-shannon.json  cathy-seibek.json  chad-purkey.json  chloe-fatusi.json  chloe-sarnoff.json  christie-peale.json  corey-bearak.json  cormack-mckay.json  daisy-calone.json  dan-kent.json  daniel-fischer.json  daniella-lombardo-sarkis.json  darrick-borowski.json  david-west.json  denise-fabiano.json  diana-finch.json  diane-viggiano.json  elaine-young.json  emanuel-kokinakis.json  emily-chingay.json  emily-klein.json  emily-kurtz.json  (+76 more)
scratch/: extract_data.py
talking-points/: README.md  open-new-york.md  open-plans-parking-mandates.md  paul-graziano-talking-points.md
(+610 files in other folders)
