[tool.poetry]
name = "cpc-city-of-yes-housing-opportunity-testimony-data"
version = "0.1.0"
description = ""
authors = ["Vikram Oberoi <vikram@citymeetings.nyc>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
instructor = "^1.3.5"
python-dotenv = "^1.0.1"
anthropic = "^0.31.2"
openai = "^1.36.1"
pydantic = "^2.8.2"
rich = "^13.7.1"
click = "^8.1.7"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
